# CTF

./: CMakeLists.txt  README.md  Writeup.md  code  install.sh
app/: main.cpp
encrypt/: code  main.cpp
include/: xor4file.cpp  xor4file.h
